crates/warden-jarmeta/tests/snapshots/corpus__forge-1.7.10-baubles.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "forge-1.7.10-baubles (Minecraft 1.7.10, loader forge)"
---
{
  "descriptors": [
    "mcmodInfo",
    "manifest"
  ],
  "mods": [
    {
      "source": "mcmodInfo",
      "loader": "forge",
      "id": "Baubles",
      "version": "1.7.10-1.0.1.10",
      "name": "Baubles",
      "description": "Adding a touch of bling to Minecraft",
      "authors": [
        "Azanor"
      ],
      "minecraft": {
        "dialect": "exact",
        "version": "1.7.10"
      }
    }
  ],
  "manifest": {},
  "classVersion": {
    "major": 50,
    "minor": 0
  }
}
