crates/warden-jarmeta/tests/snapshots/corpus__forge-1.7.10-codechickencore.snap
---
source: crates/warden-jarmeta/tests/corpus.rs
description: "forge-1.7.10-codechickencore (Minecraft 1.7.10, loader forge)"
---
{
  "descriptors": [
    "manifest"
  ],
  "manifest": {
    "fmlCorePlugin": "codechicken.core.launch.CodeChickenCorePlugin"
  },
  "classVersion": {
    "major": 50,
    "minor": 0
  }
}
